--- a/toplu-mail-gonderim-fiyatlari.html
+++ b/toplu-mail-gonderim-fiyatlari.html
@@ -210,99 +210,99 @@
                             <div class="fiyat-sag">
 								<div id="bosAciklama1">
 
-								<div class="col-sm-4" style="text-align:left" >Top. Adres Sayısı</div>
-									<div style="text-align:center" class ="col-sm-4">Aylık Gönderi Sınırı</div>
-									<div style="text-align:right" class ="col-sm-4">Toplam Fiyat</div>
+								<div class="col-sm-4 col-xs-4" style="text-align:left" >Top. Adres Sayısı</div>
+									<div style="text-align:center" class ="col-sm-4 col-xs-4">Aylık Gönderi Sınırı</div>
+									<div style="text-align:right" class ="col-sm-4 col-xs-4">Toplam Fiyat</div>
 
 								</div>
 								<div id="bosAciklama2">
 
-								<div class="col-sm-4" style="text-align:left" >Top. Kredi Sayısı</div>
-									<div style="text-align:center" class ="col-sm-4">Birim Fiyat</div>
-									<div style="text-align:right" class ="col-sm-4">Toplam Fiyat</div>
+								<div class="col-sm-4 col-xs-4" style="text-align:left" >Top. Kredi Sayısı</div>
+									<div style="text-align:center" class ="col-sm-4 col-xs-4">Birim Fiyat</div>
+									<div style="text-align:right" class ="col-sm-4 col-xs-4">Toplam Fiyat</div>
 
 								</div>
 								<div id="bosAciklama3">
 
-								<div class="col-sm-4" style="text-align:left" >Top. Adres Sayısı</div>
-									<div style="text-align:center" class ="col-sm-4">Birim Fiyat</div>
-									<div style="text-align:right" class ="col-sm-4">Toplam Fiyat</div>
+								<div class="col-sm-4 col-xs-4" style="text-align:left" >Top. Adres Sayısı</div>
+									<div style="text-align:center" class ="col-sm-4 col-xs-4">Birim Fiyat</div>
+									<div style="text-align:right" class ="col-sm-4 col-xs-4">Toplam Fiyat</div>
 
 								</div>
 
 									<div id="sinirsizAciklama1" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >0 - 1.000</div>
-										<div style="text-align:center" class ="col-sm-4"> 12.000</div>
-										<div style="text-align:right" class ="col-sm-4">Ücretsiz</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >0 - 1.000</div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4"> 12.000</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">Ücretsiz</div>
 									</div>
 
 									<div id="sinirsizAciklama2" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >1.001 - 2.500</div>
-										<div style="text-align:center" class ="col-sm-4"> 30.000</div>
-										<div style="text-align:right" class ="col-sm-4">17,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >1.001 - 2.500</div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4"> 30.000</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">17,00$</div>
 									</div>
 
 									<div id="sinirsizAciklama3" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >2.501 - 5.000</div>
-										<div style="text-align:center" class ="col-sm-4"> 60.000</div>
-										<div style="text-align:right" class ="col-sm-4">31,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >2.501 - 5.000</div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4"> 60.000</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">31,00$</div>
 									</div>
 
 		     						<div id="sinirsizAciklama4" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >5.001 - 10.000</div>
-										<div style="text-align:center" class ="col-sm-4"> Sınırsız</div>
-										<div style="text-align:right" class ="col-sm-4">50,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >5.001 - 10.000</div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4"> Sınırsız</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">50,00$</div>
 									</div>
 									<div id="sinirsizAciklama5" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >10.001 - 20.000</div>
-										<div style="text-align:center" class ="col-sm-4"> Sınırsız</div>
-										<div style="text-align:right" class ="col-sm-4">98,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >10.001 - 20.000</div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4"> Sınırsız</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">98,00$</div>
 									</div>
 									<div id="sinirsizAciklama6" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >20.001 - 35.000</div>
-										<div style="text-align:center" class ="col-sm-4"> Sınırsız</div>
-										<div style="text-align:right" class ="col-sm-4">149,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >20.001 - 35.000</div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4"> Sınırsız</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">149,00$</div>
 									</div>
 									<div id="sinirsizAciklama7" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >35.001 - 50.000 </div>
-										<div style="text-align:center" class ="col-sm-4"> Sınırsız</div>
-										<div style="text-align:right" class ="col-sm-4">179,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >35.001 - 50.000 </div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4"> Sınırsız</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">179,00$</div>
 									</div>
 
 									<div id="sinirsizAciklama8" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >50.001 - 75.000 </div>
-										<div style="text-align:center" class ="col-sm-4"> Sınırsız</div>
-										<div style="text-align:right" class ="col-sm-4">260,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >50.001 - 75.000 </div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4"> Sınırsız</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">260,00$</div>
 									</div>
 
 									<div id="sinirsizAciklama9" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >75.001 - 100.000 </div>
-										<div style="text-align:center" class ="col-sm-4"> Sınırsız</div>
-										<div style="text-align:right" class ="col-sm-4">314,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >75.001 - 100.000 </div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4"> Sınırsız</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">314,00$</div>
 									</div>
 
 									<div id="kullandikcaAciklama1" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >0 - 5.000 </div>
-										<div style="text-align:center" class ="col-sm-4"> 0,0112$</div>
-										<div style="text-align:right" class ="col-sm-4">56,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >0 - 5.000 </div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4"> 0,0112$</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">56,00$</div>
 									</div>
 
 									<div id="kullandikcaAciklama2" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >5.001 - 10.000 </div>
-										<div style="text-align:center" class ="col-sm-4"> 0,0089$</div>
-										<div style="text-align:right" class ="col-sm-4">89,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >5.001 - 10.000 </div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4"> 0,0089$</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">89,00$</div>
 									</div>
 
 									<div id="kullandikcaAciklama3" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >10.001 - 20.000 </div>
-										<div style="text-align:center" class ="col-sm-4"> 0,0053$</div>
-										<div style="text-align:right" class ="col-sm-4">107,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >10.001 - 20.000 </div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4"> 0,0053$</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">107,00$</div>
 									</div>
 
 									<div id="kullandikcaAciklama4" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >20.001 - 35.000 </div>
-										<div style="text-align:center" class ="col-sm-4"> 0,0053$</div>
-										<div style="text-align:right" class ="col-sm-4">186,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >20.001 - 35.000 </div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4"> 0,0053$</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">186,00$</div>
 									</div>
 
 									<div id="kullandikcaAciklama5" class="fiyat-aciklama">
@@ -312,68 +312,68 @@
 									</div>
 
 									<div id="kullandikcaAciklama6" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >50.001 - 75.000 </div>
-										<div style="text-align:center" class ="col-sm-4"> 0,0046$</div>
-										<div style="text-align:right" class ="col-sm-4">345,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >50.001 - 75.000 </div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4"> 0,0046$</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">345,00$</div>
 									</div>
 
 									<div id="kullandikcaAciklama7" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >75.001 - 100.000 </div>
-										<div style="text-align:center" class ="col-sm-4"> 0,0040$</div>
-										<div style="text-align:right" class ="col-sm-4">404,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >75.001 - 100.000 </div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4"> 0,0040$</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">404,00$</div>
 									</div>
 
 									<div id="dogrulamaAciklama1" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >0 - 1.000 </div>
-										<div style="text-align:center" class ="col-sm-4">0,0059$</div>
-										<div style="text-align:right" class ="col-sm-4">5,90$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >0 - 1.000 </div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4">0,0059$</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">5,90$</div>
 									</div>
 									<div id="dogrulamaAciklama2" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >1.001 - 2.500</div>
-										<div style="text-align:center" class ="col-sm-4">0,0056$</div>
-										<div style="text-align:right" class ="col-sm-4">14,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >1.001 - 2.500</div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4">0,0056$</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">14,00$</div>
 									</div>
 
 									<div id="dogrulamaAciklama3" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >2.501 - 5.000 </div>
-										<div style="text-align:center" class ="col-sm-4">0,0049$</div>
-										<div style="text-align:right" class ="col-sm-4">24,50$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >2.501 - 5.000 </div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4">0,0049$</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">24,50$</div>
 									</div>
 
 									<div id="dogrulamaAciklama4" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >5.001 - 10.000 </div>
-										<div style="text-align:center" class ="col-sm-4">0,0042$</div>
-										<div style="text-align:right" class ="col-sm-4">42,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >5.001 - 10.000 </div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4">0,0042$</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">42,00$</div>
 									</div>
 
 									<div id="dogrulamaAciklama5" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >10.001 - 20.000</div>
-										<div style="text-align:center" class ="col-sm-4">0,0038$</div>
-										<div style="text-align:right" class ="col-sm-4">76,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >10.001 - 20.000</div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4">0,0038$</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">76,00$</div>
 									</div>
 
 									<div id="dogrulamaAciklama6" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >20.001 - 35.000</div>
-										<div style="text-align:center" class ="col-sm-4">0,0034$</div>
-										<div style="text-align:right" class ="col-sm-4">119,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >20.001 - 35.000</div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4">0,0034$</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">119,00$</div>
 									</div>
 
 									<div id="dogrulamaAciklama7" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >35.001 - 50.000 </div>
-										<div style="text-align:center" class ="col-sm-4">0,0030$</div>
-										<div style="text-align:right" class ="col-sm-4">150,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >35.001 - 50.000 </div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4">0,0030$</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">150,00$</div>
 									</div>
 
 									<div id="dogrulamaAciklama8" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >50.001 - 75.000 </div>
-										<div style="text-align:center" class ="col-sm-4">0,0024$</div>
-										<div style="text-align:right" class ="col-sm-4">180,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >50.001 - 75.000 </div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4">0,0024$</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">180,00$</div>
 									</div>
 
 									<div id="dogrulamaAciklama9" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >75.001 - 100.000 </div>
-										<div style="text-align:center" class ="col-sm-4">0,0022$</div>
-										<div style="text-align:right" class ="col-sm-4">220,00$</div>
+										<div class ="col-sm-4 col-xs-4" style="text-align:left" >75.001 - 100.000 </div>
+										<div style="text-align:center" class ="col-sm-4 col-xs-4">0,0022$</div>
+										<div style="text-align:right" class ="col-sm-4 col-xs-4">220,00$</div>
 									</div>
 
 									<div id="projeAciklama" class="fiyat-aciklama"><br><br><strong>Daha Fazlası İçin Lütfen Bizimle İletişime Geçiniz</strong><br><br><br>Yüksek adetli gönderi veya doğrulama işlemleri için daha kapsamlı bir fiyat teklifine ihtiyacınız var. Lütfen bizlerle iletişime geçerek, müşteri temsilcilerimizden projenize özel fiyat teklifi talep ediniz. Müşteri temsilcilerimiz, talebinizi inceleyerek en kısa zamanda tarafınıza dönüş yaparak projeniz için en uygun teklifi sizlerle paylaşacaktır.<br><br><br><a data-fancybox="modal" data-src="#teklifiste" class="btn btn-red" href="javascript:;">Teklif Al</a><br></div>
